...
/* Class = "UIImageView"; accessibilityIdentifier = "filterImage"; ObjectID = "K1N-c6-8y1"; */
"K1N-c6-8y1.accessibilityIdentifier" = "filterImage";

/* Class = "UILabel"; text = "45 min wait"; ObjectID = "KJ5-aM-LRp"; */
"KJ5-aM-LRp.text" = "45 min wait";

/* Class = "UITabBarItem"; title = "People"; ObjectID = "OXs-Z5-1QG"; */
"OXs-Z5-1QG.title" = "People";

/* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "VQw-uQ-S0v"; */
"VQw-uQ-S0v.normalTitle" = "Cancel";

/* Class = "UILabel"; text = "JK"; ObjectID = "Vy5-U6-22L"; */
...
/* Class = "UITabBarItem"; title = "Challenges"; ObjectID = "gxC-Zm-5vA"; */
"gxC-Zm-5vA.title" = "Challenges";

/* Class = "UITabBarItem"; title = "Home"; ObjectID = "kvs-wU-Gk7"; */
"kvs-wU-Gk7.title" = "Home";

/* Class = "UIButton"; normalTitle = "Skip Tutorial"; ObjectID = "mUh-mD-wfb"; */
"mUh-mD-wfb.normalTitle" = "Skip Tutorial";

/* Class = "UIImageView"; accessibilityIdentifier = "POIIcon"; ObjectID = "nfb-2s-76J"; */
"nfb-2s-76J.accessibilityIdentifier" = "POIIcon";

/* Class = "UILabel"; accessibilityIdentifier = "POIName"; ObjectID = "qHe-xA-AqW"; */
...
